--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,3 +17,10 @@
    padding: 10px;
    box-shadow: 3px 3px black;
  } 
+ h1{
+     color:  rgb(15, 235, 235);
+ }
+
+ h2{
+    color: rgb(15, 235, 235);
+ }
